# proofcodec-verify

./: .gitignore  BENCHMARK.csv  CODEC_SPEC.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml
docs/: LICENSING.md
docs/benchmark/: index.html
proofcodec_verify/: __init__.py  cli.py
proofcodec_verify/baseline/: __init__.py  baselines.py  huffman_canonical.py
proofcodec_verify/codec/: __init__.py  combinadic.py  residual_v18.py  v18_codec.py
proofcodec_verify/proof/: __init__.py  bundle.py
tests/: test_codec.py
